Attenpt to fix star alignment issue in Edge. Remove text-align from css and add text-center class to html.

--- a/baggysoap/static/css/freelancer.css
+++ b/baggysoap/static/css/freelancer.css
@@ -16,7 +16,6 @@ hr.star-light,
 hr.star-dark {
   max-width: 15rem;
   padding: 0;
-  text-align: center;
   border: none;
   border-top: solid 0.25rem;
   margin-top: 2.5rem;
